--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 [[menu.main]]
     name = "About"
-    url = "/about/"
+    url = "/about/" #where it is located
 [[menu.main]]
     name = "GitHub"
     url = "https://github.com/rstudio/blogdown"
