--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     url = "/about/" #where it is located
 [[menu.main]]
     name = "GitHub"
-    url = "https://github.com/rstudio/blogdown"
+    url = "https://github.com/Roberto-Supe"
 [[menu.main]]
     name = "Twitter"
     url = "https://twitter.com/rstudio"
