--- a/config.toml
+++ b/config.toml
@@ -2,10 +2,9 @@ baseurl = "/"
 languageCode = "en-us"
 title = "BNU-Statistics with R"
 theme = "hugo-lithium"
-googleAnalytics = ""
+googleAnalytics = "UA-179273490-1"
 disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
-
 [permalinks]
     post = "/:year/:month/:day/:slug/"
 
@@ -21,13 +20,17 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     description = "A website built through Hugo and blogdown."
 
     # options for highlight.js (version, additional languages, and theme)
-    highlightjsVersion = "9.12.0"
-    highlightjsCDN = "//cdnjs.cloudflare.com/ajax/libs"
+    highlightjsVersion = "9.11.0"
+    highlightjsCDN = "//cdn.bootcss.com"
+    #highlightjsVersion = "9.12.0"
+    #highlightjsCDN = "//cdnjs.cloudflare.com/ajax/libs"
     highlightjsLang = ["r", "yaml"]
-    highlightjsTheme = "github"
+    highlightjsTheme = "foundation"
 
-    MathJaxCDN = "//cdnjs.cloudflare.com/ajax/libs"
-    MathJaxVersion = "2.7.5"
+    MathJaxCDN = "//cdn.bootcss.com"
+    MathJaxVersion = "2.7.1"
+    #MathJaxCDN = "//cdnjs.cloudflare.com/ajax/libs"
+    #MathJaxVersion = "2.7.5"
 
     # path to the favicon, under "static"
     favicon = "favicon.ico"
