--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "BNU-Statistics with R"
 theme = "hugo-lithium"
 googleAnalytics = "UA-179273490-1"
 disqusShortname = ""
-ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$"]
 [permalinks]
     post = "/:year/:month/:day/:slug/"
 
